# stock-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  DIAGRAMS.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.claude/: nh_manual.txt  settings.local.json
.github/workflows/: docker-publish.yml
data/: canonical.db.bak.1777258584
data/raw/disclosure/: 000660-20260420-dividend.md  005930-20260420-treasury.md  005940-20260420-treasury.md  012510-20260420-dividend.md  032820-20260420-contract.md  068270-20260421-capex.md  073570-20260419-cb.md
data/raw/news/: 000660-20260419-solidigm.md  000660-20260421-capex.md  000660-20260422-hbm-supply.md  005930-20260418-memory-cycle.md  005930-20260421-foundry-order.md  005930-20260422-hbm4-sample.md  005940-20260419-retail-share.md  005940-20260421-earnings.md  005940-20260422-ai-market.md  012510-20260419-partner.md  012510-20260421-saas-growth.md  012510-20260422-ai-agent.md  032820-20260419-export.md  032820-20260421-nuclear-policy.md  032820-20260422-smr.md  068270-20260418-fx-hit.md  068270-20260420-pipeline.md  068270-20260422-biosimilar.md  073570-20260418-biz-pivot.md  073570-20260420-lithium-price.md  073570-20260422-theme.md
data/raw/profile/: 000660-overview.md  005930-overview.md  005940-overview.md  012510-overview.md  032820-overview.md  068270-overview.md  073570-overview.md
deploy/: README.md  vultr-bootstrap.sh
docker/: entrypoint.sh
seed/: tickers.csv  wiki_facts.csv
src/stock_agent/: config.py  db.py  schema.sql
wiki/: AGENTS.md  index.md  log.md
(+151 files in other folders)
